# AQI_Prediction-Analysis

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_pipeline.sh  setup_dataset.py
.github/workflows/: ci.yml
notebooks/: Comprehensive_AQI_Analysis_and_Modeling.ipynb
reports/: model_comparison_20250723_173801.csv  model_comparison_20250723_203839.csv  model_comparison_20250723_203851.csv  model_comparison_20250723_205631.csv  model_comparison_20250723_205945.csv
src/: config.py  dashboard.py  imputation.py  preprocessing.py  train_model.py
tests/: conftest.py  test_imputation.py  test_preprocessing.py  test_train_model.py
