[tool.poetry]
name = "aqi-prediction-analysis"
version = "1.0.0"
description = "End-to-End Air Quality Prediction & Analysis System"
authors = ["Your Team <team@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.0"
numpy = "^1.24.0"
scikit-learn = "^1.3.0"
xgboost = "^1.7.0"
matplotlib = "^3.7.0"
seaborn = "^0.12.0"
plotly = "^5.15.0"
streamlit = "^1.25.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.0"
python-dotenv = "^1.0.0"
joblib = "^1.3.0"
jupyter = "^1.0.0"
tqdm = "^4.65.0"
ozon3 = "^1.2.0"
statsmodels = "^0.14.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.pytest.ini_options]
testpaths = ["tests"]